--- a/Dice_Test/Dice_Test/Base.lproj/Main.storyboard
+++ b/Dice_Test/Dice_Test/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Tags-->
         <scene sceneID="C4h-dk-GwC">
             <objects>
                 <tableViewController storyboardIdentifier="TagListViewController" id="Fu6-cX-Mqk" customClass="TagListViewController" customModule="Dice_Test" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,11 +22,32 @@
                             <outlet property="delegate" destination="Fu6-cX-Mqk" id="2DD-lS-7ui"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="njZ-ln-1yu"/>
+                    <navigationItem key="navigationItem" title="Tags" id="njZ-ln-1yu"/>
+                    <connections>
+                        <segue destination="vd0-Rr-D7L" kind="show" identifier="showTagDetail" id="ewD-As-dGq"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uPM-DJ-1w9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="570" y="106"/>
+        </scene>
+        <!--Tag Detail List View Controller-->
+        <scene sceneID="NBx-4n-caZ">
+            <objects>
+                <tableViewController id="vd0-Rr-D7L" customClass="TagDetailListViewController" customModule="Dice_Test" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="636-7e-dSe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <connections>
+                            <outlet property="dataSource" destination="vd0-Rr-D7L" id="nij-Xd-usC"/>
+                            <outlet property="delegate" destination="vd0-Rr-D7L" id="sgY-w8-0mI"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UgR-7g-dQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1509" y="105"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eQI-Uy-ocZ">
